RTL: Fix download text align

--- a/fedoraproject.org/static/css/fpo960-rtl.css
+++ b/fedoraproject.org/static/css/fpo960-rtl.css
@@ -144,3 +144,8 @@ p.warning {
 .tweet_text {
 	direction: ltr;
 }
+
+/* Fix download text align */
+#main-download-section p.small {
+    text-align: right;
+}
